adding some links

--- a/videos.html
+++ b/videos.html
@@ -69,26 +69,11 @@
       <div class="container">
         <div class="row main-div-margin">
           <!-- video box -->
-          <div class="col-md-8 main-content-box">
-            <h1></i>Portfolio</h1>
+          <div class="col-md-12 main-content-box">
+            <h3><i class="fas fa-film"></i>  Videos</h3>
             <hr>
             <br>
             <div class="col-md-12 portfolio-col">
-              <!-- code quiz -->
-              <img src="./assets/images/code-quiz.gif" class="portfolio-photos" alt="code-quiz assignment gif" data-toggle="modal" data-target="#code-quiz-modal">
-              <!-- password generator -->
-              <img src="./assets/images/password-generator.gif" class="portfolio-photos" alt="password-generator assignment gif" data-toggle="modal" data-target="#password-generator-modal">
-              <!-- project 1 -->
-              <img src="./assets/images/project-1.gif" class="portfolio-photos" alt="project-1 gif" data-toggle="modal" data-target="#project-1-modal">
-              <!-- project 2 -->
-              <img src="./assets/images/project-2.gif" class="portfolio-photos" alt="project-2 gif" data-toggle="modal" data-target="#project-2-modal">
-
-
-
-
-              <!-- <a href="https://github.com/xander-deanna/password-generator"><img src="./assets/images/password-generator.gif" class="portfolio-photos" alt="password-generator assignment gif"></a>
-              <a href="https://github.com/xander-deanna/project-1-group-7"><img src="./assets/images/project-1.gif" class="portfolio-photos" alt="project-1 gif"></a>
-              <a href="https://github.com/xander-deanna/project-2-group-3"><img src="./assets/images/project-2.gif" class="portfolio-photos" alt="project-2 gif"></a> -->
             </div>
           </div>
           <!-- empty column -->
@@ -99,8 +84,8 @@
       <!-- footer -->
       <footer class="footer mt-auto py-3 bg-dark">
         <div class="container">
-            <a id="facebook" href="#"><i class="footer-icons fab fa-facebook-square"></i></a>
-            <a id="twitter"href="#"><i class="footer-icons fab fa-twitter-square"></i></a>
+            <a id="facebook" target="_blank" href="https://www.facebook.com/events/340091084186895?ref=newsfeed"><i class="footer-icons fab fa-facebook-square"></i></a>
+            <a id="twitter" target="_blank" href="#"><i class="footer-icons fab fa-twitter-square"></i></a>
           </span>
         </div>
       </footer>
