--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <img src="./assets/images/pinupaffairflyer.png" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
               <ul>
                 <li>
-                  <a class="presale-link" href="https://embed.showclix.com/event/pin-up-affair"><h5 class="pinup">Presales on sale now! Click here!</h5></a>
+                  <a class="presale-link" target="_blank" href="https://embed.showclix.com/event/pin-up-affair"><h5 class="pinup">Presales on sale now! Click here!</h5></a>
                 </li>
                 <li>
                   <i class="fas fa-calendar-day"></i> Saturday, October 16th, 2021 at 9PM EST – 5AM EST
@@ -165,8 +165,8 @@
       <!-- footer-->
       <footer class="footer mt-auto py-3 bg-dark">
         <div class="container">
-            <a id="facebook" href="#"><i class="footer-icons fab fa-facebook-square"></i></a>
-            <a id="twitter"href="#"><i class="footer-icons fab fa-twitter-square"></i></a>
+            <a id="facebook" target="_blank" href="https://www.facebook.com/events/340091084186895?ref=newsfeed"><i class="footer-icons fab fa-facebook-square"></i></a>
+            <a id="twitter" target="_blank" href="#"><i class="footer-icons fab fa-twitter-square"></i></a>
           </span>
         </div>
       </footer>
