--- a/videos.html
+++ b/videos.html
@@ -50,12 +50,11 @@
             <!-- navbar items-->
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="fas fa-ticket-alt"></i> Latest Event</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="fas fa-film"></i> Videos</a>
-                </li>
+                <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/"><i class="fas fa-ticket-alt"></i> Latest Event</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/videos"><i class="fas fa-film"></i> Videos</a>
+              </li>
                 <li class="nav-item">
                   <a class="nav-link" href="mailto:#"><i class="fas fa-paper-plane"></i> Contact</a>
                 </li>
