--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
             <!--nav bar title/name-->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://noodle-pinup.github.io/Pin-UpAffair/">
               <img src="./assets/images/kiss.gif" class=small-kiss-gif alt="*muah!*">
               <strong class="pinup">Pin-Up</strong><em class="affair">Affair</em>
             </a>
@@ -57,7 +57,7 @@
                   <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/videos"><i class="fas fa-film"></i> Videos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="mailto:#"><i class="fas fa-paper-plane"></i> Contact</a>
+                  <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
                 </li>
               </ul>
             </div>
@@ -81,14 +81,14 @@
                   <i class="fas fa-calendar-day"></i> Saturday, October 16th, 2021 at 9PM EST – 5AM EST
                 </li>
                 <li>
-                  <i class="fas fa-map-marker-alt"></i> 600 Freeport Rd, Pittsburgh, PA 15238, United States
+                  <i class="fas fa-map-marker-alt"></i> 600 Freeport Rd, New Kensington, PA 15068
                 </li>
                 <li>
                   <i class="fas fa-stopwatch"></i> Duration: 8 hr
                 </li>
                 <br>
                 <li>
-                  <i class="fas fa-users"></i> Event brought to you by <span class="pinup">Smith Agency Events</span>, Ross Bryan, and Sean O'Neil
+                  <i class="fas fa-users"></i> Event brought to you by <span class="pinup">Smith Agency Events</span>
                 </li>
               </ul>
               <hr>
