--- a/videos.html
+++ b/videos.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
             <!--nav bar title/name-->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://noodle-pinup.github.io/Pin-UpAffair/">
               <img src="./assets/images/kiss.gif" class=small-kiss-gif alt="*muah!*">
               <strong class="pinup">Pin-Up</strong><em class="affair">Affair</em>
             </a>
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/videos"><i class="fas fa-film"></i> Videos</a>
               </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="mailto:#"><i class="fas fa-paper-plane"></i> Contact</a>
+                  <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
                 </li>
               </ul>
             </div>
@@ -72,8 +72,14 @@
             <h3><i class="fas fa-film"></i>  Videos</h3>
             <hr>
             <br>
-            <div class="col-md-12 portfolio-col">
-            </div>
+              <video class="video" controls>
+                <source src="./assets/videos/pinup-video1.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/pinup-video2.mp4" type="video/mp4"> 
+              </video>
           </div>
           <!-- empty column -->
           <div class="col-md-4"></div>
@@ -88,9 +94,6 @@
           </span>
         </div>
       </footer>
-    </body>
-  </html>
-
     </body>
   </html>
 
