--- a/photos.html
+++ b/photos.html
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/photos"><i class="fas fa-camera"></i></i> Photos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
+                  <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
                 </li>
               </ul>
             </div>
@@ -68,29 +68,39 @@
         </nav>
       </header>
 
-      <!-- flexbox/main content -->
+      <!--flexbox/main content-->
       <div class="container">
         <div class="row main-div-margin">
-          <!-- video box -->
+          <!-- content -->
           <div class="col-md-12 main-content-box">
-            <h3><i class="fas fa-film"></i>  Videos</h3>
+            <h3><i class="fas fa-camera"></i>  Photos</h3>
             <hr>
             <br>
-              <video class="video" controls>
-                <source src="./assets/videos/pinup-video1.mp4" type="video/mp4"> 
-              </video>
-              <br>
-              <br>
-              <video class="video"  controls>
-                <source src="./assets/videos/pinup-video2.mp4" type="video/mp4"> 
-              </video>
+            <div class="col-md-12 portfolio-col">
+              <img src="./assets/images/photos/photo1.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo2.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo3.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo4.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo5.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo6.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo7.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo8.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo9.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo10.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo11.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo12.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo13.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo14.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo15.png" class="photo" alt="rave photo">
+              <img src="./assets/images/photos/photo16.png" class="photo" alt="rave photo">
+            </div>
           </div>
           <!-- empty column -->
           <div class="col-md-4"></div>
         </div>
       </div>
 
-      <!-- footer -->
+      <!-- footer-->
       <footer class="footer mt-auto py-3 bg-dark">
         <div class="container">
             <a id="facebook" target="_blank" href="https://www.facebook.com/events/340091084186895?ref=newsfeed"><i class="footer-icons fab fa-facebook-square"></i></a>
@@ -100,5 +110,3 @@
       </footer>
     </body>
   </html>
-
-  
