--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                   <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/videos"><i class="fas fa-film"></i> Videos</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/photos"><i class="fas fa-camera"></i></i> Photos</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
                 </li>
               </ul>
