--- a/photos.html
+++ b/photos.html
@@ -104,7 +104,7 @@
       <footer class="footer mt-auto py-3 bg-dark">
         <div class="container">
             <a id="facebook" target="_blank" href="https://www.facebook.com/events/340091084186895?ref=newsfeed"><i class="footer-icons fab fa-facebook-square"></i></a>
-            <a id="twitter" target="_blank" href="#"><i class="footer-icons fab fa-twitter-square"></i></a>
+            <a id="twitter" target="_blank" href="https://twitter.com/Pinupreturns"><i class="footer-icons fab fa-twitter-square"></i></a>
           </span>
         </div>
       </footer>
