adding more videos and cleaning up UI

--- a/index.html
+++ b/index.html
@@ -98,10 +98,19 @@
               <p>
                 THE RETURN OF MORE BASS, MORE CLASS, & MORE SASS. NEW BEAUTIFUL MASSIVE VIRGIN VENUE WITH MULTIPLE BARS, FULL NANO LEAF ART, ALL NIGHT PAINTBALL AND MORE.
                 <br>
+                <br>
+                VIP packages available include: Valet parking, no line, private bar, personal green room, artist meet and greet, balcony access for main stage, drink tickets, and more!
+                <br>
+                <br>
+                <strong class="green">CASH PRIZE $500</strong> for best Pinup Guy or Gal. Make sure you come in costume!
                 <hr>
                 <br>
                 <span class="pinup"> FEATURING:</span>
                 <br>
+              </p>
+              <p>
+                <strong class="orange">SPECIAL SURPRISE HEADLINER:</strong>
+                Not to be announced at all. 😱 If you wanna see who it is, you have to come to the event! This year features our biggest surprise headliner yet!!!!!
               </p>
               <p>
                 <strong class="orange">MR TRAUMATIK:</strong>
