--- a/videos.html
+++ b/videos.html
@@ -84,19 +84,60 @@
               <video class="video"  controls>
                 <source src="./assets/videos/pinup-video2.mp4" type="video/mp4"> 
               </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/BukuPinup3.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/CrackerjackPinUp2.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/ErynEvansPinip3.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/RobbieRocksoPinup3.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/Sean216Pinup3.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/TerravitaPinup3.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/Pinup3-1.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/Pinup3-2.mp4" type="video/mp4"> 
+              </video>
+              <br>
+              <br>
+              <video class="video"  controls>
+                <source src="./assets/videos/Pinup3-3.mp4" type="video/mp4"> 
+              </video>
+              <br>
           </div>
-          <!-- empty column -->
-          <div class="col-md-4"></div>
         </div>
       </div>
 
       <!-- footer -->
       <footer class="footer mt-auto py-3 bg-dark">
-        <div class="container">
             <a id="facebook" target="_blank" href="https://www.facebook.com/events/340091084186895?ref=newsfeed"><i class="footer-icons fab fa-facebook-square"></i></a>
             <a id="twitter" target="_blank" href="https://twitter.com/Pinupreturns"><i class="footer-icons fab fa-twitter-square"></i></a>
-          </span>
-        </div>
       </footer>
     </body>
   </html>
