--- a/photos.html
+++ b/photos.html
@@ -37,12 +37,12 @@
       <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
-            <!--nav bar title/name-->
+            <!-- nav bar title/name -->
             <a class="navbar-brand" href="https://noodle-pinup.github.io/Pin-UpAffair/">
               <img src="./assets/images/kiss.gif" class=small-kiss-gif alt="*muah!*">
               <strong class="pinup">Pin-Up</strong><em class="affair">Affair</em>
             </a>
-            <!--nav button (for when collapsed)-->
+            <!-- nav button (for when collapsed) -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-bars"></i>
             </button>
@@ -68,7 +68,7 @@
         </nav>
       </header>
 
-      <!--flexbox/main content-->
+      <!-- flexbox/main content -->
       <div class="container">
         <div class="row main-div-margin">
           <!-- content -->
@@ -76,7 +76,90 @@
             <h3><i class="fas fa-camera"></i>  Photos</h3>
             <hr>
             <br>
-            <div class="col-md-12 portfolio-col">
+
+            <!-- photo carousel -->
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./assets/images/photos/photo1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo3.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo4.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo5.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo6.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo7.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo8.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo9.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo10.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo11.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo12.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo13.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo14.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo15.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/images/photos/photo16.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <br>
+
+            <!-- regular photo images -->
+            <div class="col-md-12 portfolio-col photo-div">
               <img src="./assets/images/photos/photo1.png" class="photo" alt="rave photo">
               <img src="./assets/images/photos/photo2.png" class="photo" alt="rave photo">
               <img src="./assets/images/photos/photo3.png" class="photo" alt="rave photo">
@@ -95,9 +178,6 @@
               <img src="./assets/images/photos/photo16.png" class="photo" alt="rave photo">
             </div>
           </div>
-          <!-- empty column -->
-          <div class="col-md-4"></div>
-        </div>
       </div>
 
       <!-- footer-->
@@ -105,7 +185,6 @@
         <div class="container">
             <a id="facebook" target="_blank" href="https://www.facebook.com/events/340091084186895?ref=newsfeed"><i class="footer-icons fab fa-facebook-square"></i></a>
             <a id="twitter" target="_blank" href="https://twitter.com/Pinupreturns"><i class="footer-icons fab fa-twitter-square"></i></a>
-          </span>
         </div>
       </footer>
     </body>
