changing working on home page a little bit

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 VIP packages available include: Valet parking, no line, private bar, personal green room, artist meet and greet, balcony access for main stage, drink tickets, and more!
                 <br>
                 <br>
-                <strong class="green">CASH PRIZE $500</strong> for best Pinup Guy or Gal. Make sure you come in costume!
+                <strong class="green">$500 CASH PRIZE</strong> for best Pinup Guy or Gal. Make sure you come in costume!
                 <hr>
                 <br>
                 <span class="pinup"> FEATURING:</span>
