--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row main-div-margin">
           <!-- content -->
           <div class="col-md-12 main-content-box">
-            <h3><i class="fas fa-ticket-alt"></i>  Pin-Up Affair 7</h3>
+            <h3><i class="fas fa-ticket-alt"></i>  Pin-Up Affair 7 asdfljhbasldjhfbajlsdhbfaljshdbfas</h3>
             <hr>
             <img src="./assets/images/pinupaffairflyer.png" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
               <ul>
