--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
             <!--nav bar title/name-->
-            <a class="navbar-brand" href="https://noodle-pinup.github.io/Pin-UpAffair/">
+            <a class="navbar-brand" href="https://pinupaffair.com/">
               <img src="./assets/images/kiss.gif" class=small-kiss-gif alt="*muah!*">
               <strong class="pinup">Pin-Up</strong><em class="affair">Affair</em>
             </a>
@@ -51,13 +51,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/"><i class="fas fa-ticket-alt"></i> Latest Event</a>
+                  <a class="nav-link" href="https://pinupaffair.com/"><i class="fas fa-ticket-alt"></i> Latest Event</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/videos"><i class="fas fa-film"></i> Videos</a>
+                  <a class="nav-link" href="https://pinupaffair.com/videos"><i class="fas fa-film"></i> Videos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/photos"><i class="fas fa-camera"></i></i> Photos</a>
+                  <a class="nav-link" href="https://pinupaffair.com//photos"><i class="fas fa-camera"></i></i> Photos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
@@ -73,7 +73,7 @@
         <div class="row main-div-margin">
           <!-- content -->
           <div class="col-md-12 main-content-box">
-            <h3><i class="fas fa-ticket-alt"></i>  Pin-Up Affair 7 asdfljhbasldjhfbajlsdhbfaljshdbfas</h3>
+            <h3><i class="fas fa-ticket-alt"></i>  Pin-Up Affair 7</h3>
             <hr>
             <img src="./assets/images/pinupaffairflyer.png" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
               <ul>
