--- a/photos.html
+++ b/photos.html
@@ -51,13 +51,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/"><i class="fas fa-ticket-alt"></i> Latest Event</a>
+                  <a class="nav-link" href="https://pinupaffair.com/"><i class="fas fa-ticket-alt"></i> Latest Event</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/videos"><i class="fas fa-film"></i> Videos</a>
+                  <a class="nav-link" href="https://pinupaffair.com/videos"><i class="fas fa-film"></i> Videos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://noodle-pinup.github.io/Pin-UpAffair/photos"><i class="fas fa-camera"></i></i> Photos</a>
+                  <a class="nav-link" href="https://pinupaffair.com//photos"><i class="fas fa-camera"></i></i> Photos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
