--- a/videos.html
+++ b/videos.html
@@ -76,7 +76,7 @@
             <h3><i class="fas fa-film"></i>  Videos</h3>
             <hr>
             <br>
-              <video class="video" controls>
+              <!-- <video class="video" controls>
                 <source src="./assets/videos/pinup-video1.mp4" type="video/mp4"> 
               </video>
               <br>
@@ -85,7 +85,7 @@
                 <source src="./assets/videos/pinup-video2.mp4" type="video/mp4"> 
               </video>
               <br>
-              <br>
+              <br> -->
               <video class="video"  controls>
                 <source src="./assets/videos/BukuPinup3.mp4" type="video/mp4"> 
               </video>
