--- a/videos.html
+++ b/videos.html
@@ -68,6 +68,9 @@
         </nav>
       </header>
 
+      <!-- Pin-Up Girl Image -->
+      <img src="./assets/images/pinupgirl.png" class="pinup-girl" alt="Pin-Up Girl">
+
       <!-- flexbox/main content -->
       <div class="container">
         <div class="row main-div-margin">
