--- a/videos.html
+++ b/videos.html
@@ -57,7 +57,7 @@
                   <a class="nav-link" href="https://pinupaffair.com/videos"><i class="fas fa-film"></i> Videos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://pinupaffair.com//photos"><i class="fas fa-camera"></i></i> Photos</a>
+                  <a class="nav-link" href="https://pinupaffair.com/photos"><i class="fas fa-camera"></i></i> Photos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="mailto:bookings@pinupaffair.com"><i class="fas fa-paper-plane"></i> Contact</a>
