fixing a broken link

--- a/photos.html
+++ b/photos.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <div class="container-fluid">
             <!-- nav bar title/name -->
-            <a class="navbar-brand" href="https://noodle-pinup.github.io/Pin-UpAffair/">
+            <a class="navbar-brand" href="https://pinupaffair.com/">
               <img src="./assets/images/kiss.gif" class=small-kiss-gif alt="*muah!*">
               <strong class="pinup">Pin-Up</strong><em class="affair">Affair</em>
             </a>
