--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <div class="col-md-12 main-content-box">
             <h3><i class="fas fa-ticket-alt"></i>  Pin-Up Affair 7</h3>
             <hr>
-            <img src="./assets/images/pinupaffairflyer.png" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
+            <img src="./assets/images/pinupaffairflyer2.gif" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
+            <img src="./assets/images/pinupaffairflyer3.gif" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal-back">
               <ul>
                 <li>
                   <a class="presale-link" target="_blank" href="https://embed.showclix.com/event/pin-up-affair"><h5 class="pinup">Presales on sale now! Click here!</h5></a>
@@ -177,12 +178,24 @@
         </div>
       </div>
 
-      <!--flyer modal-->
+      <!--flyer front modal-->
       <div class="modal fade" id="flyer-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <img src="./assets/images/pinupaffairflyer.png" class="flyer-large" alt="*muah!*">
+              <img src="./assets/images/pinupaffairflyer2.gif" class="flyer-large" alt="*muah!*">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--flyer back modal-->
+      <div class="modal fade" id="flyer-modal-back" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <img src="./assets/images/pinupaffairflyer3.gif" class="flyer-large" alt="*muah!*">
               </div>
             </div>
           </div>
@@ -197,5 +210,7 @@
           </span>
         </div>
       </footer>
+
+      <script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"134596432"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script>
     </body>
   </html>
