fixing modal close button

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <a type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="far fa-times-circle"></i></a>
+              <!-- <a type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="far fa-times-circle"></i></a> -->
               <img src="./assets/images/pinupaffairflyer2.gif" class="flyer-large" alt="*muah!*">
               </div>
             </div>
@@ -196,7 +196,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <a type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="far fa-times-circle"></i></a>
+              <!-- <a type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="far fa-times-circle"></i></a> -->
               <img src="./assets/images/pinupaffairflyer3.gif" class="flyer-large" alt="*muah!*">
               </div>
             </div>
