--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <div class="col-md-12 main-content-box">
             <h3><i class="fas fa-ticket-alt"></i>  Pin-Up Affair 7</h3>
             <hr>
-            <img src="./assets/images/pinupaffairflyer2.gif" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
-            <img src="./assets/images/pinupaffairflyer3.gif" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal-back">
+            <img src="./assets/images/pinupaffairflyer4.jpg" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal">
+            <!-- <img src="./assets/images/pinupaffairflyer3.gif" class=flyer alt="*muah!*" data-toggle="modal" data-target="#flyer-modal-back"> -->
               <ul>
                 <li>
                   <a class="presale-link" target="_blank" href="https://embed.showclix.com/event/pin-up-affair"><h5 class="pinup">Presales on sale now! Click here!</h5></a>
@@ -87,9 +87,9 @@
                 <li>
                   <i class="fas fa-calendar-day"></i> Saturday, October 16th, 2021 at 9PM EST – 5AM EST
                 </li>
-                <!-- <li>
-                  <i class="fas fa-map-marker-alt"></i> 600 Freeport Rd, New Kensington, PA 15068
-                </li> -->
+                <li>
+                  <i class="fas fa-map-marker-alt"></i> Venue Announced for Pinup with Multiple rooms indoor/outdoor venue on the river private dock with Luxurious Cruises providing our Docked on River Stage
+                </li>
                 <li>
                   <i class="fas fa-stopwatch"></i> Duration: 8 hr
                 </li>
@@ -182,7 +182,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <img src="./assets/images/pinupaffairflyer2.gif" class="flyer-large" alt="*muah!*">
+              <img src="./assets/images/pinupaffairflyer4.jpg" class="flyer-large" alt="*muah!*">
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <img src="./assets/images/pinupaffairflyer3.gif" class="flyer-large" alt="*muah!*">
+              <img src="./assets/images/pinupaffairflyer4.jpg" class="flyer-large" alt="*muah!*">
               </div>
             </div>
           </div>
